--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "egg-ratelimiter",
-  "version": "3.0.0",
-  "description": "",
+  "name": "egg-rate-limitation",
+  "version": "1.0.0",
+  "description": "egg plugin for ratelimiter",
   "eggPlugin": {
     "name": "ratelimiter"
   },
@@ -12,7 +12,6 @@
     "ratelimiter"
   ],
   "dependencies": {
-    "bytenode": "^1.3.4",
     "ioredis": "^4.28.1",
     "rate-limiter-flexible": "^2.3.5"
   },
@@ -49,12 +48,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eggjs/egg-ratelimiter.git"
+    "url": "git+https://github.com/undsky/egg-ratelimiter.git"
   },
   "bugs": {
-    "url": "https://github.com/eggjs/egg/issues"
+    "url": "https://github.com/undsky/egg-ratelimiter/issues"
   },
-  "homepage": "https://github.com/eggjs/egg-ratelimiter#readme",
-  "author": "",
+  "homepage": "https://github.com/undsky/egg-ratelimiter#readme",
+  "author": "姜彦汐 https://www.undsky.com",
   "license": "MIT"
 }
